--- a/KegeCommandSpy/src/plugin.yml
+++ b/KegeCommandSpy/src/plugin.yml
@@ -4,7 +4,7 @@ version: 1.0
 author: Kegekiss
 commands:
    commandspy:
-      description: Liste les IPs des joueurs et montre les doublons.
+      description: Permet d'utiliser l'espion des commandes.
       usage: /commandspy [toggle on/off]
       permission: kegecommandspy.command
       permission-message: §6Vous n'avez pas la permission d'utiliser cette commande!
